<feat> correction manage tool menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body class="d-flex flex-column vw-100">
+<body><!--class="d-flex flex-column vw-100"-->
 
     {% if current_user.is_authenticated %}
 
